feat: use own timestamp type, num seconds since unix epoch
I've also tried to make the crate "no_std" under the assumption that
some of this will run in wasm runtime, but not sure if this will hold

--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -3,8 +3,12 @@ name = "storage"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+use_std = []
+
 [dependencies]
 uuid = { version = "1.15.1", features = ["v4"] }
 
 [dev-dependencies]
+storage = { path = ".", features = ["use_std"] }
 tokio = { version = "1.44.0", features = ["rt", "macros"] }
