fix: use async_trait to make traits more portable
I'm almost certain this won't work in the long term as I don't think `T`
can be guaranteed to be Sync

--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 uuid = { version = "1.15.1", features = ["v4"] }
+async-trait = "0.1.87"
 
 [dev-dependencies]
 tokio = { version = "1.44.0", features = ["rt", "macros"] }
