feat: add companies to a stub store

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ dioxus = { version = "0.6.0" }
 # workspace
 ui = { path = "ui" }
 server = { path = "server" }
+storage = { path = "storage" }
 
 [profile]
 
