feat: add roles to desktop

--- a/desktop/Cargo.toml
+++ b/desktop/Cargo.toml
@@ -5,8 +5,9 @@ edition = "2021"
 
 [dependencies]
 dioxus = { workspace = true, features = ["router"] }
-ui = { workspace = true }
-storage = { workspace = true }
+ui = { workspace = true, features = ["desktop"] }
+storage = { workspace = true, features = ["desktop"] }
+uuid = { version = "1.15.1", features = ["v4"] }
 
 [features]
 default = []
