--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -6,9 +6,12 @@ edition = "2021"
 [dependencies]
 uuid = { version = "1.15.1", features = ["v4"] }
 async-trait = "0.1.87"
+surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
+serde = { version = "1.0.219", features = ["derive"] }
 
 [dev-dependencies]
 tokio = { version = "1.44.0", features = ["rt", "macros"] }
+tempdir = "0.3.7"
 
 [features]
 desktop = []
