--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -8,6 +8,7 @@ dioxus = { workspace = true }
 server = { workspace = true }
 storage = { workspace = true }
 uuid = { version = "1.15.1", features = ["v4"] }
+tokio = "1.44.1"
 
 [features]
 desktop = []
