--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -54,3 +54,18 @@ jobs:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - run: cargo clippy -- -D warnings
+
+  dx-fmt:
+    name: dioxus format
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - run: rustup update ${{ env.RUST_TOOLCHAIN }} && rustup default ${{ env.RUST_TOOLCHAIN }}
+
+      - uses: cargo-bins/cargo-binstall@main
+
+      - name: Install Dioxus-CLI
+        run: cargo binstall dioxus-cli --force
+
+      - run: dx fmt --check
