feat: added json file store

--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -8,6 +8,8 @@ async-trait = "0.1.87"
 libsql = "0.9.1"
 surrealdb = { version = "2.2.1", features = ["kv-rocksdb"] }
 serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
+tokio = { version = "1.45.0", features = ["fs"] }
 uuid = { version = "1.15.1", features = ["v4"] }
 
 [dev-dependencies]
