--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,6 +7,18 @@ env:
 name: CI
 
 jobs:
+  check:
+    name: cargo check
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        toolchain:
+          - stable
+    steps:
+      - uses: actions/checkout@v4
+      - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
+      - run: cargo check --verbose
+
   build:
     name: cargo build
     runs-on: ubuntu-latest
@@ -56,7 +68,7 @@ jobs:
       - run: cargo clippy -- -D warnings
 
   dx-fmt:
-    name: dioxus format
+    name: dx fmt
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
