--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -10,6 +10,7 @@ server = { workspace = true }
 storage = { workspace = true }
 uuid = { version = "1.15.1", features = ["v4"] }
 tokio = "1.44.1"
+web-sys = { version = "0.3.77", features = ["HtmlFormElement"] }
 
 [features]
 desktop = []
