--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 async-trait = "0.1.87"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+thiserror = "2.0.12"
 tokio = { version = "1.45.0", features = ["fs", "sync", "rt-multi-thread"] }
 uuid = { version = "1.15.1", features = ["v4", "serde"] }
 
