--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = { workspace = true }
 dioxus = { workspace = true }
 server = { workspace = true }
 storage = { workspace = true }
