--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -6,11 +6,11 @@ edition = "2021"
 [dependencies]
 anyhow = { workspace = true }
 dioxus = { workspace = true }
+pulldown-cmark = "0.13.0"
 server = { workspace = true }
 storage = { workspace = true }
 uuid = { version = "1.15.1", features = ["v4"] }
 tokio = "1.44.1"
-web-sys = { version = "0.3.77", features = ["HtmlFormElement"] }
 
 [features]
 desktop = []
