--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -13,6 +13,7 @@ tokio = { version = "1.45.0", features = ["fs", "sync", "rt-multi-thread"] }
 uuid = { version = "1.15.1", features = ["v4", "serde"] }
 
 [dev-dependencies]
+paste = "1.0.15"
 tempdir = "0.3.7"
 tokio = { version = "1.44.1", features = ["rt", "macros"] }
 
