--- a/desktop/Cargo.toml
+++ b/desktop/Cargo.toml
@@ -12,6 +12,7 @@ storage = { workspace = true, features = ["desktop"] }
 tokio = { version = "1.45.1", features = ["rt", "macros"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "json"] }
+uuid = { version = "1.17.0", features = ["v4"] }
 
 [features]
 default = []
