--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
-          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev
+          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
       - name: Update rust
@@ -37,7 +37,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
-          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev
+          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
       - name: Update rust
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
-          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev
+          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
       - name: Update rust
@@ -75,7 +75,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
-          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev
+          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
       - name: Update rust
@@ -94,7 +94,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
-          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev
+          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
       - name: Update rust
@@ -109,7 +109,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
-          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev
+          sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
       - name: Update rust
