--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -9,13 +9,13 @@ partially = { version = "0.2.1", features = ["derive"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 thiserror = "2.0.12"
-tokio = { version = "1.45.1", features = ["fs", "sync", "rt-multi-thread"] }
+tokio = { version = "1.45.1", features = ["fs", "sync", "rt-multi-thread", "macros"] }
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
 
 [dev-dependencies]
 paste = "1.0.15"
 tempdir = "0.3.7"
-tokio = { version = "1.45.1", features = ["rt", "macros"] }
+tokio = { version = "1.45.1", features = ["rt"] }
 
 [features]
 desktop = []
