--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
+          sudo apt update
           sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
@@ -37,6 +38,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
+          sudo apt update
           sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
@@ -56,6 +58,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
+          sudo apt update
           sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
@@ -75,6 +78,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
+          sudo apt update
           sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
@@ -94,6 +98,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
+          sudo apt update
           sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
@@ -109,6 +114,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install system packages
         run: |
+          sudo apt update
           sudo apt-get install libgtk-3-dev javascriptcoregtk-4.1-dev libsoup-3.0-dev webkit2gtk-4.1-dev libxdo-dev
           echo "PKG_CONFIG_PATH=/usr/lib/x86_64-linux-gnu/pkgconfig" >> $GITHUB_ENV
           PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags gdk-3.0
