--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ members = [
 anyhow = "1.0.98"
 dioxus = { version = "0.6.0" }
 log = "0.4.27"
+serde = "1.0.219"
+serde_json = "1.0.141"
 
 # workspace
 ui = { path = "ui" }
