--- a/desktop/Cargo.toml
+++ b/desktop/Cargo.toml
@@ -11,6 +11,8 @@ storage = { workspace = true, features = ["desktop"] }
 tokio = { version = "1.46.1", features = ["rt", "macros"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["fmt", "std", "json"] }
+serde = { workspace = true }
+serde_json = { workspace = true }
 
 [features]
 default = []
