--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 anyhow = { workspace = true }
 chrono = { version = "0.4.41", features = ["serde"] }
 partially = { version = "0.2.1", features = ["derive"] }
-serde = { version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.141"
+serde = { workspace = true, features = ["derive"] }
+serde_json = { workspace = true }
 thiserror = "2.0.12"
 tokio = { version = "1.46.1", features = ["fs", "sync", "rt-multi-thread", "macros"] }
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
