--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -12,8 +12,8 @@ server = { workspace = true }
 storage = { workspace = true }
 uuid = { version = "1.17.0", features = ["v4"] }
 log = "0.4.27"
-serde = "1.0.219"
-serde_json = "1.0.141" # Annoyingly this is only needed for HashMap deserialisation
+serde = { workspace = true }
+serde_json = { workspace = true } # Annoyingly this is only needed for HashMap deserialisation
 
 [dev-dependencies]
 dioxus = { workspace = true, features = ["router"] }
