--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = { workspace = true }
+application_context = { workspace = true }
 dioxus = { workspace = true }
 dioxus-html = { version = "0.6.3", features = ["serialize"] }
 pulldown-cmark = "0.13.0"
