--- a/storage/Cargo.toml
+++ b/storage/Cargo.toml
@@ -15,7 +15,7 @@ uuid = { version = "1.17.0", features = ["v4", "serde"] }
 
 [dev-dependencies]
 paste = "1.0.15"
-tempdir = "0.3.7"
+tempfile = "3.23.0"
 tokio = { version = "1.47.1", features = ["rt"] }
 
 [features]
