--- a/ui/Cargo.toml
+++ b/ui/Cargo.toml
@@ -9,7 +9,7 @@ application_context = { workspace = true }
 dioxus = { workspace = true }
 dioxus-html = { version = "0.7.1", features = ["serialize"] }
 pulldown-cmark = "0.13.0"
-storage = { workspace = true }
+storage = { workspace = true, features = ["field_names"] }
 uuid = { version = "1.17.0", features = ["v4"] }
 log = "0.4.27"
 serde = { workspace = true }
