fix(cicd): dioxus version outdated in actions, set specific version

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -7,6 +7,7 @@ on:
 env:
   CARGO_TERM_COLOR: always
   RUST_TOOLCHAIN: stable
+  DIOXUS_VERSION: "0.7"
 
 name: Release
 
@@ -27,7 +28,7 @@ jobs:
       - name: Use carbo binstall
         uses: cargo-bins/cargo-binstall@main
       - name: Install Dioxus-CLI
-        run: cargo binstall dioxus-cli --force
+        run: cargo binstall dioxus-cli@${{ env.DIOXUS_VERSION }} --force
       - name: Dioxus bundle
         run: dx bundle --package job-tracker --platform "${{ env.PLATFORM }}" --package-types "${{ matrix.package-type }}" --out-dir "build/${{ matrix.package-type }}"
       - name: Upload artifact
@@ -53,7 +54,7 @@ jobs:
       - name: Use carbo binstall
         uses: cargo-bins/cargo-binstall@main
       - name: Install Dioxus-CLI
-        run: cargo binstall dioxus-cli --force
+        run: cargo binstall dioxus-cli@${{ env.DIOXUS_VERSION }} --force
       - name: Dioxus bundle
         run: dx bundle --package job-tracker --platform "${{ env.PLATFORM }}" --package-types "${{ matrix.package-type }}" --out-dir "build/${{ matrix.package-type }}"
       - name: Upload artifact
@@ -81,7 +82,7 @@ jobs:
 #      - name: Use carbo binstall
 #        uses: cargo-bins/cargo-binstall@main
 #      - name: Install Dioxus-CLI
-#        run: cargo binstall dioxus-cli --force
+#        run: cargo binstall dioxus-cli@${{ env.DIOXUS_VERSION }} --force
 #      - name: Dioxus bundle
 #        run: dx bundle --package job-tracker --platform "${{ env.PLATFORM }}" --package-types "${{ matrix.package-type }}" --out-dir "build/${{ matrix.package-type }}"
 #      - name: Upload artifact
