--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,7 +25,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update rust
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - name: Use carbo binstall
+      - name: Use cargo binstall
         uses: cargo-bins/cargo-binstall@main
       - name: Install Dioxus-CLI
         run: cargo binstall dioxus-cli@${{ env.DIOXUS_VERSION }} --force
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update rust
         run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-      - name: Use carbo binstall
+      - name: Use cargo binstall
         uses: cargo-bins/cargo-binstall@main
       - name: Install Dioxus-CLI
         run: cargo binstall dioxus-cli@${{ env.DIOXUS_VERSION }} --force
@@ -79,7 +79,7 @@ jobs:
 #      - uses: actions/checkout@v4
 #      - name: Update rust
 #        run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
-#      - name: Use carbo binstall
+#      - name: Use cargo binstall
 #        uses: cargo-bins/cargo-binstall@main
 #      - name: Install Dioxus-CLI
 #        run: cargo binstall dioxus-cli@${{ env.DIOXUS_VERSION }} --force
