--- a/Dioxus.toml
+++ b/Dioxus.toml
@@ -14,10 +14,10 @@ name = "Job Tracker"
 identifier = "com.fios-quest.job-tracker"
 publisher = "Fios Quest"
 
-icon = [
-    "icons/32x32.png",
-    "icons/128x128.png",
-    "icons/128x128@2x.png",
-    "icons/icon.icns",
-    "icons/icon.ico"
-]
+#icon = [
+#    "./icons/32x32.png",
+#    "./icons/128x128.png",
+#    "./icons/128x128@2x.png",
+#    "./icons/icon.icns",
+#    "./icons/icon.ico"
+#]
