feat(event-broker): add storage based events behind feature gate

--- a/event-broker/Cargo.toml
+++ b/event-broker/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2024"
 
 [dependencies]
 uuid = { version = "1.19.0", features = ["v4"] }
+storage = { workspace = true, optional = true }
+
+[features]
+storage-events = [
+    "dep:storage"
+]
